karl package Changelog
======================

3.126 (2014-07-08)
------------------

- Fix dates in network events view by using a date format the globalization
  Javascript can parse. (LP #1337430)

- Fix another issue where Unicode headers may be sent. I don't know why some
  files have a 'mimetype' attribute with a unicode value. (LP #1338707)

- Added a missing renderer declaration to the people grid json view zcml 
  configuration. (LP #1338784)

3.125 (2014-07-06)
------------------

- Fix an issue where Unicode headers will be sent. See
  https://bugs.launchpad.net/karl3/+bug/1337812 .

3.124 (2014-07-03)
------------------

- Redirects to login form are now handled client side rather than server side in
  order to accomodate clicking on Karl links from inside Microsoft Office
  documents.  ISYN.  (LP #1180338)

3.123 (2014-07-03)
------------------

- Added hostname to redis log entries.  See
  https://bugs.launchpad.net/karl3/+bug/1313775

- Don't show an Attachments heading on calendar event view if there are
  no attachments.  See https://bugs.launchpad.net/karl3/+bug/1305286

- Change the max size on images from 530x530 to 640x640.
  See https://bugs.launchpad.net/karl3/+bug/1304628

3.121 (2014-04-21)
------------------

- Added a perfmetrics call recording rendering duration for HTML requests
  (the same duration reported in HTML by 'karl.timeit').
  See https://bugs.launchpad.net/karl3/+bug/1302125

- Stop caching extracted text (the '_extracted_data' attribute) for files.
  Add a script to remove the cached data from existing instances.
  See https://bugs.launchpad.net/karl3/+bug/1309688

- Add a warning which includes the current path when file conversion fails.
  See https://bugs.launchpad.net/karl3/+bug/1274114

- Add a '/debug_converters.html' view to aid in isolating "missing
  doctotest" reports.  See https://bugs.launchpad.net/karl3/+bug/1274114

3.120 (2014-02-26)
------------------
